fix horizontal lines on small screen size

--- a/app/styles/helpers.less
+++ b/app/styles/helpers.less
@@ -8,7 +8,7 @@ small {
 
 hr{
   margin: @baseLineHeight *2  auto;
-  width: 880px;
+  width: 825px;
   max-width: 100%;
   border: 1px solid #caac97;
   &.small{
